fixed text wrapping on small screen

--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ summary p {
   padding: 10px 30px;
 }
 
+.prep-list li {
+  white-space: nowrap;
+}
+
 ul li span {
   font-weight: 700;
   margin-left: 10px;
